fix: gaps, visual effects

--- a/shelter/pages/styles/pets.css
+++ b/shelter/pages/styles/pets.css
@@ -43,16 +43,17 @@
     margin-bottom: 60px;
 }
 .our_slider {
-    padding: 2px 2px;
+    padding: 5px 5px;
     display: flex;
     flex-direction: row;
-    gap: 30px 38px;
+    gap: 30px 30px;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
 .our__window {
     overflow-x: hidden;
+    max-width: 1201px;
     width: 1200px;
     height: 960px;
     display: flex;
@@ -60,7 +61,6 @@
     align-items: center;
     justify-content: flex-start;
 }
-
 .buttons__container{
     display: flex;
     flex-direction: row;
@@ -120,10 +120,10 @@
         padding-bottom: 75px;
     }
     .our .tittle-h2 {
-        margin-bottom: 30px;
+        margin-bottom: 0;
     }
     .our_slider {
-        padding: 2px 2px;
+        padding: 30px 62px 40px 62px;
         display: flex;
         flex-direction: row;
         gap: 30px 38px;
@@ -131,13 +131,14 @@
         align-items: center;
         flex-wrap: wrap;
         overflow-y: hidden;
-        height: 1370px;
+        height: 1435px;
     }
     .our__window {
         margin: 0 auto;
-        padding: 0 60px;
-        max-width: 710px;
-        height: 1410px;
+        padding: 0;
+        max-width: auto;  /*710px;*/
+        width: auto;
+        height: 1435px;
     }
     .buttons__container{
         display: flex;
@@ -204,6 +205,9 @@
     .logo-text {
         color: #292929;
     }
+    .logo__container{
+        margin-left: 10px;
+    }
     .modal .modal-tittle {
         text-align: center;
     }
@@ -211,10 +215,10 @@
         padding: 42px 0 42px 0;
     }
     .our .tittle-h2 {
-        margin-bottom: 42px;
+        margin-bottom: 0;
     }
     .our_slider {
-        padding: 2px 2px;
+        padding: 40px 5px 11px 5px;
         display: flex;
         flex-direction: column;
         gap: 0;
@@ -223,11 +227,13 @@
         flex-wrap: wrap;
     }
     .friends__card {
-        margin-bottom: 30px;
+        width: 50vw;
+        margin-bottom: 29px;
     }
     .our__window {
-        width: 274px;
-        height: 1417px;
+        max-width: auto;
+        width: auto;  /*274*/
+        height: auto; /*1410*/
         margin: 0 auto;
     }
     .buttons__container div:nth-child(-n+4) {
@@ -242,4 +248,6 @@
     .card-4, .card-5, .card-6, .card-7, .card-8 {
         display: none;
     }
+
+
 }
