--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -355,8 +355,7 @@ li {
                 -5px 5px 2px -1px rgba(95, 115, 186, 0.5),
                 5px -5px 2px -1px rgba(248, 84, 84, 0.708),
                 5px 5px 2px -1px rgba(70, 145, 80, 0.5)*/
-    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
-
+    box-shadow: 0px 2px 25px 14px rgba(13, 13, 13, 0.04);
 }
 .friends__card:hover .friend-name {
     transform: scale(1.2);
